--- a/SeleniumSmokeTest/.classpath
+++ b/SeleniumSmokeTest/.classpath
@@ -6,13 +6,13 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/Nejla/Desktop/selenium-java-3.141.0/client-combined-3.141.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Nejla/Desktop/selenium-java-3.141.0/client-combined-3.141.0-sources.jar" sourcepath="C:/Users/Nejla/Desktop/selenium-java-3.141.0/client-combined-3.141.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Nejla/Desktop/selenium-java-3.141.0/libs/byte-buddy-1.8.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Nejla/Desktop/selenium-java-3.141.0/libs/commons-exec-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Nejla/Desktop/selenium-java-3.141.0/libs/guava-25.0-jre.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Nejla/Desktop/selenium-java-3.141.0/libs/okhttp-3.11.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Nejla/Desktop/selenium-java-3.141.0/libs/okio-1.14.0.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/selenium-java-3.141.0/byte-buddy-1.8.15.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-3.141.0/client-combined-3.141.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-3.141.0/client-combined-3.141.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-3.141.0/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-3.141.0/guava-25.0-jre.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-3.141.0/okhttp-3.11.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-3.141.0/okio-1.14.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
