--- a/SeleniumSmokeTest/.classpath
+++ b/SeleniumSmokeTest/.classpath
@@ -7,12 +7,12 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/selenium-java-3.141.0/byte-buddy-1.8.15.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-java-3.141.0/client-combined-3.141.0-sources.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-java-3.141.0/client-combined-3.141.0.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-java-3.141.0/commons-exec-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-java-3.141.0/guava-25.0-jre.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-java-3.141.0/okhttp-3.11.0.jar"/>
-	<classpathentry kind="lib" path="lib/selenium-java-3.141.0/okio-1.14.0.jar"/>
+	<classpathentry kind="lib" path="lib/byte-buddy-1.8.15.jar"/>
+	<classpathentry kind="lib" path="lib/client-combined-3.141.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/client-combined-3.141.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/guava-25.0-jre.jar"/>
+	<classpathentry kind="lib" path="lib/okhttp-3.11.0.jar"/>
+	<classpathentry kind="lib" path="lib/okio-1.14.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
