renamed name of project to Navigator

--- a/SeleniumSmokeTest/.project
+++ b/SeleniumSmokeTest/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SeleniumSmokeTest</name>
+	<name>Navigator</name>
 	<comment></comment>
 	<projects>
 	</projects>
